[mod/template] path to adminByLegal

--- a/templates/admin/AdminLegal.html.twig
+++ b/templates/admin/AdminLegal.html.twig
@@ -37,7 +37,7 @@
                     </td>
                     <td class="centerText">
                         <span class="hint">More info</span><br>
-                        <a href="#">
+                        <a href="{{ path('adminByLegal',{'id' : term.id}) }}">
                             <i class="fa fa-plus" aria-hidden="true"></i>
                         </a>
                     </td>
