--- a/templates/admin/adminLegalData.html.twig
+++ b/templates/admin/adminLegalData.html.twig
@@ -19,7 +19,7 @@
             <a href="{{ path('adminActions',{'entity' : 'term' , 'id' : term.id , 'action' : 'delete'}) }}" class="btn btn-default delete">
                 <i class="fa fa-trash"></i>
             </a>
-            <a href="#" class="btn btn-default edit">
+            <a href="{{path('adminEditLegal',{'id' :  term.id}) }}" class="btn btn-default edit">
                 <i class="fa fa-pencil"></i>
             </a>
         </div>
