[mod/html] path/link to legal notice page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -93,7 +93,9 @@
              <div id="footerItem">
                  <ul class="list-inline">
                      <li class="list-inline-item pull-left">Contact us</li>
-                     <li class="list-inline-item">Legal Notice</li>
+                     <li class="list-inline-item">
+                         <a href="{{ path('legalNotice') }}">Legal Notice</a>
+                     </li>
                      <li class="list-inline-item pull-right">Partnership</li>
                  </ul>
              </div>
