[mod/templates] update legal notice templates with new properties/functionalities

--- a/templates/admin/AdminEditLegal.html.twig
+++ b/templates/admin/AdminEditLegal.html.twig
@@ -19,10 +19,16 @@
                 {{ form_widget(form.article ,{'attr':{'class':'tinyMce'}}) }}
                 <span class="invalidBack">{{ form_errors(form.article) }}</span>
             </div>
+            <div class="form-group row" id="editTermStatus">
+                {{ form_label(form.status) }}<span class="req">*</span>
+                {{ form_widget(form.status) }}
+                <span class="invalidBack">{{ form_errors(form.article) }}</span>
+            </div>
             <div class="form-group">
                 <button class="btn btn-success" id="addStoryBtn" type="submit">Submit</button>
                 <input type="hidden" id="originalTermTitle" value="{{ term.title }}">
                 <input type="hidden" id="originalTermArticle" value="{{ term.article }}">
+                <input type="hidden" id="originalTermStatus" value="{{ term.status }}">
             </div>
             {{ form_end(form) }}
         </div>
