--- a/templates/admin/adminNav.html.twig
+++ b/templates/admin/adminNav.html.twig
@@ -1,15 +1,33 @@
 {% block body %}
 <div id="adminNav">
-    <span class id="closeNav"><i class="fa fa-bars fa-2x"></i></span>
-    <a href="{{ path('admin') }}">Dashboard</a>
-    <a href="{{ path('adminUser') }}">Users</a>
-    <a href="{{ path('adminStory') }}">Stories</a>
-    <a href="{{ path('adminTopic') }}">Topics</a>
-    <a href="{{ path('adminPatronage') }}">Patronages</a>
-    <a href="{{ path('adminLegal') }}">Legal Notice</a>
+    <h3>Back Office
+    <span id="open"><i class="fa" aria-hidden="true"></i></span>
+    </h3>
+    <a href="{{ path('admin') }}">
+        <i class="fa fa-dashboard" style="color: white"></i>
+        Dashboard
+    </a>
+    <a href="{{ path('adminUser') }}">
+        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+        Users
+    </a>
+    <a href="{{ path('adminStory') }}">
+        <i class="fa fa-book" aria-hidden="true"></i>
+        Stories
+    </a>
+    <a href="{{ path('adminTopic') }}">
+        <i class="fa fa-bookmark" aria-hidden="true"></i>
+        Topics
+    </a>
+    <a href="{{ path('adminPatronage') }}">
+        <i class="fa fa-bank" aria-hidden="true"></i>
+        Patronages
+    </a>
+    <a href="{{ path('adminLegal') }}">
+        <i class="fa fa-file-text-o" aria-hidden="true"></i>
+        Legal Notice
+    </a>
 </div>
-
-<span id="open"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
 
 {% endblock %}
 
