--- a/templates/admin/adminNav.html.twig
+++ b/templates/admin/adminNav.html.twig
@@ -4,19 +4,19 @@
     <span id="open"><i class="fa" aria-hidden="true"></i></span>
     </h3>
     <a href="{{ path('admin') }}">
-        <i class="fa fa-dashboard" style="color: white"></i>
+        <i class="fa fa-dashboard"  id="admin" aria-hidden="true"></i>
         Dashboard
     </a>
     <a href="{{ path('adminUser') }}">
-        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+        <i class="fa fa-user-circle-o" id="user" aria-hidden="true"></i>
         Users
     </a>
     <a href="{{ path('adminStory') }}">
-        <i class="fa fa-book" aria-hidden="true"></i>
+        <i class="fa fa-book" id="story" aria-hidden="true"></i>
         Stories
     </a>
     <a href="{{ path('adminTopic') }}">
-        <i class="fa fa-bookmark" aria-hidden="true"></i>
+        <i class="fa fa-bookmark" id="topic" aria-hidden="true"></i>
         Topics
     </a>
     <a href="{{ path('adminPatronage') }}">
@@ -24,7 +24,7 @@
         Patronages
     </a>
     <a href="{{ path('adminLegal') }}">
-        <i class="fa fa-file-text-o" aria-hidden="true"></i>
+        <i class="fa fa-file-text-o" id="legal" aria-hidden="true"></i>
         Legal Notice
     </a>
 </div>
