[sass] padding for adminNav icons

--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -1152,6 +1152,14 @@ table .rightText{
 	}
 }
 
+#patronage{
+	padding-right: 14px !important;
+}
+
+#topic{
+	padding-right: 25px !important;
+}
+
 #adminNav a {
 	padding: 8px 8px 8px 0;
 	text-decoration: none;
@@ -1712,6 +1720,14 @@ table .rightText{
 			color: #FFFFFF;
 			display: block;
 			transition: 0.3s;
+		}
+
+		#patronage{
+			padding-right: 16px !important;
+		}
+
+		#topic{
+			padding-right: 21px !important;
 		}
 
 		.adminList{
