--- a/templates/admin/adminNav.html.twig
+++ b/templates/admin/adminNav.html.twig
@@ -20,7 +20,7 @@
         Topics
     </a>
     <a href="{{ path('adminPatronage') }}">
-        <i class="fa fa-bank" aria-hidden="true"></i>
+        <i class="fa fa-bank" id="patronage" aria-hidden="true"></i>
         Patronages
     </a>
     <a href="{{ path('adminLegal') }}">
