--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -1015,7 +1015,7 @@ h1,
 }
 /*------browse-------*/
 #introBrowse {
-	margin-top: 100px;
+	margin-top: 90px;
 	h1 b{
 		color: $secondary-color;
 	}
@@ -1041,9 +1041,15 @@ h1,
 	margin-top: 100px;
 }
 /*-----admin------*/
-.adminTitle{
+.adminTitle,
+.titleNoPadding{
 	padding-top: 10%;
 }
+
+h1.titleNoPadding{
+	padding-bottom: 0 !important;
+}
+
 #dashboard{
 	li{
 		font-size: 3rem;
@@ -1168,6 +1174,11 @@ table .rightText{
 	padding-right: 25px !important;
 }
 
+.filterList{
+	text-align: center;
+	margin-bottom: 3%;
+	color: $secondary-color;
+}
 #adminNav a {
 	padding: 8px 8px 8px 0;
 	text-decoration: none;
@@ -1485,7 +1496,7 @@ table .rightText{
 		/*-------   browse   --------*/
 
 		#introBrowse{
-			margin-top: -12%;
+			margin-top: -13%;
 			min-height: 480px;
 		}
 
