--- a/public/sass/import/_tablet.scss
+++ b/public/sass/import/_tablet.scss
@@ -36,11 +36,11 @@
   }
 
   #connection{
-    left: 78%;
+    right: 20px;
   }
 
   #disconnect{
-    left: 88%;
+    right: 20px;
   }
 
   #disconnect,
