--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -31,7 +31,15 @@
         <p class ="h2-like">Here's a selection of the last published one</p>
     </div>
     <div class="container-fluid homeStories">
-        {{ include('storyCard.html.twig') }}
+        <div class="slider">
+            {{ include('storyCard.html.twig') }}
+        </div>
+            <span id="panLeft" class="panner pull-left" data-scroll-modifier='-1'>
+            <i class="fa fa-chevron-circle-left fa-lg" aria-hidden="true"></i>
+        </span>
+            <span id="panRight" class="panner pull-right" data-scroll-modifier='1'>
+            <i class="fa fa-chevron-circle-right fa-lg" aria-hidden="true"></i>
+        </span>
     </div>
 
 
@@ -66,4 +74,5 @@
     {{ parent() }}
     <script src="{{ asset('js/notification.js') }}"></script>
     <script src="{{ asset('js/animatedCounter.js') }}"></script>
+    <script src="{{ asset('js/scroll.js') }}"></script>
 {% endblock %}
