--- a/templates/admin/adminLegalData.html.twig
+++ b/templates/admin/adminLegalData.html.twig
@@ -18,7 +18,8 @@
                 </li>
             </ul>
         </div>
-        <div class="adminAbstract">
+
+        <div class="adminAbstract" id="legalArticle">
             <h3>Legal notice article</h3>
             <p>
                 {{ term.article|raw}}
