--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -62,29 +62,45 @@
         {{ form_start(form ,{'attr':{'id':'updateAdministrator'}}) }}
         <div class="form-group row">
             {{ form_label(form.email) }}
-            {{ form_widget(form.email ,{'attr':{'class':'form-control'}}) }}
+            {{ form_widget(form.email) }}
             {{ form_errors(form.email) }}
         </div>
         <div class="form-group row">
-            {{ form_label(form.pswd) }}
-            {{ form_widget(form.pswd ,{'attr':{'class':'form-control'}}) }}
+            {{ form_label(form.pswd) }}<span class="req">*</span>
+            {{ form_widget(form.pswd ) }}
+            <span class="invalid_sign" id="invalid_pswd_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_pswd_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_pswd" style="display: none">Between 6 up to 30 letters</span>
             {{ form_errors(form.pswd) }}
         </div>
         <div class="form-group row">
-            {{ form_label(form.confirmPswd) }}
-            {{ form_widget(form.confirmPswd ,{'attr':{'class':'form-control'}}) }}
+            {{ form_label(form.confirmPswd) }}<span class="req">*</span>
+            {{ form_widget(form.confirmPswd) }}
+            <span class="invalid_sign" id="invalid_confirm_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_confirm_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_confirm" style="display: none">Passwords don't match</span>
             {{ form_errors(form.confirmPswd) }}
         </div>
         <div class="form-group row">
-            <button class="btn btn-success" type="submit">Submit</button>
+            <button class="btn btn-success" id="updateAdministratorBtn" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
     </div>
     <div class="modalOverlay" style="display: none"></div>
 
+
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('js/modalForm.js') }}"></script>
+    <script src="{{ asset('js/adminCredential.js') }}"></script>
     <script src="{{ asset('js/animatedCounter.js') }}"></script>
 {% endblock %}
