--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -68,25 +68,25 @@
         <div class="form-group row">
             {{ form_label(form.pswd) }}<span class="req">*</span>
             {{ form_widget(form.pswd ) }}
-            <span class="invalid_sign" id="invalid_pswd_icon" style="display: none">
+            <span class="invalid_sign" id="invalid_term_pswd_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
-            <span class="valid_sign" id="valid_pswd_icon" style="display: none">
+            <span class="valid_sign" id="valid_term_pswd_icon" style="display: none">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </span>
-            <span class="invalid" id="invalid_pswd" style="display: none">Between 6 up to 30 letters</span>
+            <span class="invalid" id="invalid_term_pswd" style="display: none">Between 6 up to 30 letters</span>
             {{ form_errors(form.pswd) }}
         </div>
         <div class="form-group row">
             {{ form_label(form.confirmPswd) }}<span class="req">*</span>
             {{ form_widget(form.confirmPswd) }}
-            <span class="invalid_sign" id="invalid_confirm_icon" style="display: none">
+            <span class="invalid_sign" id="invalid_term_confirm_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
-            <span class="valid_sign" id="valid_confirm_icon" style="display: none">
+            <span class="valid_sign" id="valid_term_confirm_icon" style="display: none">
                 <i class="fa fa-check" aria-hidden="true"></i>
             </span>
-            <span class="invalid" id="invalid_confirm" style="display: none">Passwords don't match</span>
+            <span class="invalid" id="invalid_term_confirm" style="display: none">Passwords don't match</span>
             {{ form_errors(form.confirmPswd) }}
         </div>
         <div class="form-group row">
