--- a/templates/admin/adminPatronage.html.twig
+++ b/templates/admin/adminPatronage.html.twig
@@ -64,10 +64,17 @@
         {{ form_start(form ,{'attr':{'id':'newPatronageForm'}}) }}
         <div class="form-group row">
             {{ form_label(form.organization) }}
-            {{ form_widget(form.organization ,{'attr':{'class':'form-control'}}) }}
+            {{ form_widget(form.organization) }}
+            <span class="invalid_sign" id="invalid_patronage_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_patronage_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_patronage" style="display: none">Between 3 up to 30 letters</span>
             {{ form_errors(form.organization) }}
         </div>
-        {{ form_widget(form.patronageId ,{'attr':{'class':'form-control'}}) }}
+        {{ form_widget(form.patronageId) }}
         <div class="form-group row">
             <button class="btn btn-success" id="newPatronageBtn" type="submit">Submit</button>
         </div>
@@ -80,4 +87,5 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('js/modalForm.js') }}"></script>
+    <script src="{{ asset('js/patronageForm.js') }}"></script>
 {% endblock %}
