--- a/templates/admin/adminTopic.html.twig
+++ b/templates/admin/adminTopic.html.twig
@@ -64,10 +64,17 @@
         {{ form_start(form ,{'attr':{'id':'newTopicForm'}}) }}
         <div class="form-group row">
             {{ form_label(form.type) }}
-            {{ form_widget(form.type ,{'attr':{'class':'form-control'}}) }}
+            {{ form_widget(form.type) }}
+            <span class="invalid_sign" id="invalid_topic_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_topic_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_topic" style="display: none">Between 3 up to 20 letters</span>
             {{ form_errors(form.type) }}
         </div>
-        {{ form_widget(form.topicId ,{'attr':{'class':'form-control'}}) }}
+        {{ form_widget(form.topicId) }}
         <div class="form-group row">
             <button class="btn btn-success" id="newTopicBtn" type="submit">Submit</button>
         </div>
@@ -80,4 +87,5 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('js/modalForm.js') }}"></script>
+    <script src="{{ asset('js/topicForm.js') }}"></script>
 {% endblock %}
