--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -1442,6 +1442,11 @@ table .rightText{
 	}
 }
 
+.mceType{
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
 /*-------- legal notice -------*/
 
 .termBreak:not(:last-of-type){
