--- a/templates/admin/adminLegalCreate.html.twig
+++ b/templates/admin/adminLegalCreate.html.twig
@@ -7,25 +7,37 @@
     <h1 class="adminTitle">CREATE LEGAL NOTICE ARTICLE</h1>
 
     <div class="container-fluid entityData">
-        <div class="well">
+        <div class="well mceType">
             {{ form_start(form ,{'attr':{'id':'addLegal'}}) }}
             <div class="form-group row">
-                {{ form_label(form.title) }}
+                {{ form_label(form.title) }}<span class="req">*</span>
                 {{ form_widget(form.title) }}
+                <span class="invalid_sign" id="invalid_legal_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_legal_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_legal" style="display: none">Between 3 up to 30 letters</span>
             </div>
             <div class="form-group row">
                 {{ form_label(form.article) }}
                 {{ form_widget(form.article ,{'attr':{'class':'tinyMce'}}) }}
             </div>
             <div class="form-group row">
-                {{ form_label(form.status) }}
+                {{ form_label(form.status) }}<span class="req">*</span>
                 {{ form_widget(form.status) }}
             </div>
             <div class="form-group row ">
-                <button class="btn" type="submit">Submit</button>
+                <button class="btn" id="createLegalBtn" type="submit">Submit</button>
             </div>
             {{ form_end(form) }}
         </div>
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/legalNoticeForm.js') }}"></script>
 {% endblock %}
