--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,10 @@
         <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=fps3y9l4erw7zgwdffjno3ppzxkfzl8rxb9u4kndv95djvwx"></script>
         <script>tinymce.init({
             selector:'.tinyMce',
-            plugins: 'wordcount'
+            plugins: 'wordcount',
+            toolbar: 'bold italic | undo redo',
+            menubar: 'edit view',
+            height: "480"
         });</script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
