--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -323,6 +323,25 @@ a.editFront:focus{
 	}
 }
 
+#resetBtn {
+	color: $secondary-color !important;
+	background-color: transparent !important;
+	width: 260px;
+	height: 60px;
+	line-height: 50px;
+	border-color: $secondary-color;
+}
+
+#resetBtn:hover,
+#resetBtn:focus{
+	background-color: $secondary-color !important;
+	color: #FFFFFF !important;
+	border: none;
+	i{
+		color: #FFFFFF !important;
+	}
+}
+
 
 /* -----LAYOUT-----*/
 
@@ -758,7 +777,7 @@ h1,
 	margin-top: 4%;
 }
 
-#filterBtn .btn,
+#filterBtn .btn:not(.nostyle),
 #filterHome .btn{
 	border: none !important;
 	color: #FFFFFF !important;
@@ -770,8 +789,8 @@ h1,
 	}
 }
 
-#filterBtn .btn:hover,
-#filterBtn .btn:focus,
+#filterBtn .btn:hover:not(.nostyle),
+#filterBtn .btn:focus:not(.nostyle),
 #filterHome .btn:hover,
 #filterHome .btn:focus{
 	border: solid 1px $secondary-color !important;
@@ -1552,14 +1571,6 @@ table .rightText{
 
 		/*------------- filter --------*/
 
-		#filterBtn .btn,
-		#filterHome .btn{
-			width: 93%;
-			left: 3%;
-			margin-top: 3%;
-			min-width: 50%;
-			max-width: 100%;
-		}
 
 		#filter{
 			height: 250px;
@@ -1589,7 +1600,6 @@ table .rightText{
 				width: 260px;
 				margin-bottom: 5%;
 			}
-
 		}
 
 		/*------------ home -----------*/
