--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -74,9 +74,16 @@
             </div>
             <div class="form-group row col-md-12">
                 {{ form_label(form.engagement) }}
-                {{ form_widget(form.engagement ,{'attr':{'class':'form-control'}}) }}
+                {{ form_widget(form.engagement ,{'attr':{'rows':'10'}}) }}
                 {{ form_errors(form.engagement,{'attr':{'class':'invalid'}}) }}
                 <span id="wordCount"> 0/300 </span>
+                <span class="invalid_sign" id="invalid_engagement_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_engagement_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_engagement" style="display: none">Up to 300 words</span>
             </div>
             <div class="form-group row col-md-12">
                 {{ form_label(form.email) }}<span class="req">*</span>
