--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -5,7 +5,7 @@
     <div class="pageHeader">
         <h1>Add Your Story</h1>
     </div>
-    <div class="well container-fluid addStory">
+    <div class="container-fluid addStory">
         {{ form_start(form ,{'attr':{'id':'addForm'}}) }}
         <div id="storyPart1 row col-md-12">
             <p id="showPart1"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story topic and patronage</p>
