--- a/templates/admin/AdminEditLegal.html.twig
+++ b/templates/admin/AdminEditLegal.html.twig
@@ -7,7 +7,7 @@
 
     <div class="container-fluid entityData">
 
-        <div class="well">
+        <div>
             {{ form_start(form ,{'attr':{'id':'editTermForm'}}) }}
             <div class="form-group row" id="editTermTitle">
                 {{ form_label(form.title) }}<span class="req">*</span>
