--- a/templates/admin/adminEditStory.html.twig
+++ b/templates/admin/adminEditStory.html.twig
@@ -7,7 +7,7 @@
 
 <div class="container-fluid entityData">
 
-    <div class="well">
+    <div>
     {{ form_start(form ,{'attr':{'id':'addForm'}}) }}
         <div class="form-group row" id="editTitle">
             {{ form_label(form.title) }}<span class="req">*</span>
