--- a/templates/admin/adminLegalCreate.html.twig
+++ b/templates/admin/adminLegalCreate.html.twig
@@ -7,7 +7,7 @@
     <h1 class="adminTitle">CREATE LEGAL NOTICE ARTICLE</h1>
 
     <div class="container-fluid entityData">
-        <div class="well mceType">
+        <div class="mceType">
             {{ form_start(form ,{'attr':{'id':'addLegal'}}) }}
             <div class="form-group row">
                 {{ form_label(form.title) }}<span class="req">*</span>
