[fix] page title

--- a/templates/admin/AdminLegal.html.twig
+++ b/templates/admin/AdminLegal.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     {{ include('admin/adminNav.html.twig') }}
-    <h1 class="adminTitle">LEGAL ACTION</h1>
+    <h1 class="adminTitle">LEGAL NOTICE</h1>
 
     <div class="container-fluid adminList">
         <table class="table">
