--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.country) }}
-                    {{ form_widget(form.country ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.country) }}
                     <span class="invalidBack">{{ form_errors(form.country) }}</span>
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-group row col-md-12 part1" style="display: block">
                     {{ form_label(form.investor) }}
-                    {{ form_widget(form.investor,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.investor) }}
                     <span class="invalidBack">{{ form_errors(form.investor) }}</span>
                     <span class="invalid_sign" id="invalid_investor_icon" style="display: none">
                         <i class="fa fa-times" aria-hidden="true"></i>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-group row col-md-12 part2" id="abstract" style="display: none">
                     {{ form_label(form.abstract) }}<span class="req">*</span>
-                    {{ form_widget(form.abstract ,{'attr':{'class':'form-control tinyMce'}}) }}
+                    {{ form_widget(form.abstract ,{'attr':{'class':'tinyMce'}}) }}
                     <span class="invalidBack">{{ form_errors(form.abstract) }}</span>
                     <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
                         <i class="fa fa-times" aria-hidden="true"></i>
