--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -67,12 +67,12 @@
                 {{ form_label(form.claimEdit) }}
             </div>
 
-            <div class="form-group row col-md-12">
+            <div class="form-group row col-md-12" id="profession" style="display: none">
                 {{ form_label(form.profession) }}
                 {{ form_widget(form.profession) }}
                 {{ form_errors(form.profession,{'attr':{'class':'invalid'}}) }}
             </div>
-            <div class="form-group row col-md-12">
+            <div class="form-group row col-md-12" id="engagement" style="display: none">
                 {{ form_label(form.engagement) }}
                 {{ form_widget(form.engagement ,{'attr':{'rows':'10'}}) }}
                 {{ form_errors(form.engagement,{'attr':{'class':'invalid'}}) }}
